Fix .contact-us div alignment for viewing on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,7 +315,6 @@ footer a {
 }
 
 .contact-us {
-    width: 65%;
     margin: 0 auto;
     margin-top: 48px;
 }
